# r2ai

r2plugin/: README.md  config.mk  deps.mk  meson.build  static.cfg
r2plugin/core/: deps.h  deps.mk  meson.build
src/: Makefile  README.md  apikeys.c  async.c  auto.c  claw.c  gemini.c  http.c  main.c  markdown.c  markdown.h  meson.build  openai.c  r2ai.1  r2ai.c  r2ai.h  r2ai_priv.h  tools.c  vertex.c  wizard.c
src/http/: pwsh.inc.c  r2.inc.c
