shared_library(
  'core_r2ai',
  '../src/anthropic.c',
  '../src/apikeys.c',
  '../src/async.c',
  '../src/auto.c',
  '../src/claw.c',
  '../src/gemini.c',
  '../src/http.c',
  '../src/json.c',
  '../src/llm.c',
  '../src/markdown.c',
  '../src/messages.c',
  '../src/openai.c',
  '../src/query.c',
  '../src/r2ai.c',
  '../src/rawtools.c',
  '../src/tools.c',
  '../src/vdb.c',
  '../src/vertex.c',
  '../src/wizard.c',
  include_directories: ['../src', include_dirs],
  dependencies: r2_core,
  override_options: ['werror=false'],
  install: true,
  install_dir: r2_plugdir,
)
